--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,32 @@
-body{
+body {
     margin: 0;
 }
+
 .container {
     max-width: 1400px;
     margin: 0 auto;
+}
+
+@media (max-width: 1500px) {
+    .container {
+        max-width: 1000px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .container {
+        max-width: 700px;
+    }
+}
+
+@media (max-width: 800px) {
+    .container {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        max-width: 300px;
+    }
 }
