--- a/src/components/categories/Categories.module.scss
+++ b/src/components/categories/Categories.module.scss
@@ -3,15 +3,36 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 80px;
+
     button {
         background: unset;
         border: unset;
         padding-bottom: 13px;
         color: #9D9D9D;
+        transition: .3s;
+
+        &:hover {
+            cursor: pointer;
+            transform: translateY(-5px);
+        }
     }
 }
 
 .active {
     color: #E4002B !important;
     border-bottom: solid 2px #E4022B !important;
+}
+
+
+@media (max-width: 1100px) {
+    .productsWrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 100px);
+
+        button {
+            width: 100px;
+            padding-bottom: 13px;
+            margin-bottom: 10px;
+        }
+    }
 }
