--- a/src/components/content/Content.module.scss
+++ b/src/components/content/Content.module.scss
@@ -2,6 +2,21 @@
     padding: 40px 0 40px 0;
     background-color: #F7F6F5;
 
+    & > :nth-child(2n) {
+        background-color: white;
+
+        div {
+            & > :last-child {
+                div {
+                    &:hover {
+                        background: #F7F6F5;
+                        border-radius: 8px;
+                    }
+                }
+            }
+        }
+    }
+
     h4 {
         font-size: 32px;
         font-weight: normal;
@@ -9,16 +24,52 @@
 }
 
 .wrapperItems {
-    max-width: 1400px;
-    margin: 0 auto;
+    padding: 20px 0 20px 0;
+
+    div {
+        max-width: 1400px;
+        margin: 0 auto;
+    }
 }
 
 
 .griWrapperProduct {
-
-    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     grid-column-gap: 72px;
     grid-row-gap: 1em;
+
+}
+
+@media (max-width: 1500px) {
+    .wrapperItems {
+        div {
+            max-width: 1000px;
+
+        }
+    }
+}
+
+@media (max-width: 1100px) {
+    .wrapperItems {
+        div {
+            max-width: 700px;
+
+        }
+    }
+}
+
+@media (max-width: 800px) {
+    .wrapperItems {
+        div {
+            max-width: 400px;
+        }
+    }
+}
+@media (max-width: 500px) {
+    .wrapperItems {
+        div {
+            max-width: 300px;
+        }
+    }
 }
