--- a/src/components/deliveryForm/DeliveryForm.module.scss
+++ b/src/components/deliveryForm/DeliveryForm.module.scss
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    &>:first-child{
+
+    & > :first-child {
         margin-right: 43px;
     }
 
@@ -23,5 +24,26 @@
             border: unset;
             outline: unset;
         }
+    }
+}
+
+
+@media (max-width: 800px) {
+    .deliveryAddressForm {
+        align-items: flex-start;
+        flex-direction: column;
+
+        div {
+            justify-content: space-between;
+        }
+
+        & > :first-child {
+            margin: 30px 0 20px 0;
+        }
+
+        h3 {
+            margin: 0
+        }
+
     }
 }
