--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -6,8 +6,7 @@
 }
 
 .wrapperProductItems {
-    padding: 16px 40px;
-
+    padding: 16px 20px;
 
     &:hover {
         background: #FFFFFF;
@@ -27,11 +26,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-
-   /* img {
-        width: 192px;
-        height: 152px;
-    }*/
+    transition: .3s;
 
     h5 {
         font-size: 24px;
@@ -47,12 +42,11 @@
     & > :first-child {
         position: relative;
     }
-
 }
 
 .addedProduct {
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     right: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.08);
     width: 40px;
@@ -62,6 +56,12 @@
     background-color: white;
     font-size: 23px;
     font-weight: 500;
+
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.05);
+    }
 }
 
 .quantityGoods {
@@ -70,12 +70,14 @@
     right: 10px;
     height: 40px;
     color: white;
-    border-radius: 50px;
-    background: black;
+    border-radius: 50px !important;
+    background: black !important;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: .3s;
+
 
     span {
         font-size: 20px;
@@ -90,8 +92,12 @@
         border: unset;
         background: unset;
 
-        &:hover{
+        &:hover {
             cursor: pointer;
+        }
+
+        &:active {
+            transform: scale(1.05);
         }
     }
 
