--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,9 +1,84 @@
-.container{
+.container {
     position: relative;
-    img{
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+
+    & > :first-child {
+        margin: 0 auto;
+
+        img {
+            margin: 0 auto;
+
+        }
+    }
+}
+
+.wrapperSection {
+    margin-top: 81px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    text-align: center;
+    align-items: center;
+}
+
+.sectionWrapper {
+    display: flex;
+    flex-direction: column;
+
+    h3 {
+        font-size: 32px;
+    }
+}
+
+.socialInfoWrapper {
+    margin-top: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+
+    & > :first-child {
+        display: flex;
+        align-items: center;
+        width: 200px;
+        justify-content: space-between;
+    }
+
+    & > :last-child {
+        display: flex;
+        align-items: center;
         position: absolute;
-        top: 0;
-        left: 50%;
-        width: 70px;
+        right: 0;
+
+        img {
+            margin-left: 15px;
+        }
+    }
+}
+
+
+@media (max-width: 800px) {
+    .socialInfoWrapper {
+        flex-direction: column;
+
+        & > :last-child {
+            margin-top: 20px;
+            position: relative;
+        }
+    }
+
+    .wrapperSection {
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+        & > :nth-child(3) {
+            grid-column: 1 / 3;
+            grid-row: 2 / 1;
+
+        }
+
     }
 }
